--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@nextui-org/react": "^2.2.10",
+    "chart.js": "^4.4.2",
     "framer-motion": "^11.0.20",
     "next": "14.1.4",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1"
   },
